--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     //Zoom ImageView
     implementation 'com.jsibbold:zoomage:1.3.1'
 
+    //stepper
+    implementation 'com.github.acefalobi:android-stepper:0.3.0'
+
 }
