--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,28 +22,31 @@
         tools:replace="android:allowBackup"
         tools:targetApi="n">
         <activity
+            android:name=".requests.RequestDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".supplier_costs.AddPhotographySupplierCostActivity"
             android:exported="false"
-            android:screenOrientation="portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".supplier_costs.AddProductionSupplierCostActivity"
             android:exported="false"
-            android:screenOrientation="portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".supplier_costs.AddPurchaseSupplierCostActivity"
             android:exported="false"
-            android:screenOrientation="portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".supplier_costs.AddPrintSupplierCostActivity"
             android:exported="false" />
         <activity
             android:name=".job_orders.JobOrdersActivity"
             android:exported="false"
-            android:screenOrientation="portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".requests.purchase.AddPurchaseActivity"
             android:exported="false"
-            android:screenOrientation="portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".requests.photography.AddPhotographyActivity"
             android:exported="false"
@@ -55,7 +58,7 @@
         <activity
             android:name=".home.projects.AddProjectActivity"
             android:exported="false"
-            android:screenOrientation="portrait"  />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".requests.print.AddPrintActivity"
             android:exported="false"
@@ -63,7 +66,7 @@
         <activity
             android:name=".project_requests.RequestsActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
