--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,6 @@ dependencies {
     implementation 'com.jsibbold:zoomage:1.3.1'
 
     //stepper
-    implementation 'com.github.acefalobi:android-stepper:0.3.0'
+    implementation 'com.shuhart.stepview:stepview:1.5.1'
 
 }
