--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".requests.RequestDetailsActivity"
+            android:name=".requests.request_details.RequestDetailsActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
