--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:name=".utils.App"
         android:allowBackup="false"
@@ -21,6 +20,15 @@
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup"
         tools:targetApi="n">
+        <activity
+            android:name=".supplier_costs.edit.EditPurchaseSupplierCostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".supplier_costs.edit.EditPrintSupplierCostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".supplier_costs.edit.EditPhotographySupplierCostActivity"
+            android:exported="false" />
         <activity
             android:name=".job_orders.AddJobOrderActivity"
             android:exported="false" />
