--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,25 @@
         tools:replace="android:allowBackup"
         tools:targetApi="n">
         <activity
+            android:name=".supplier_costs.edit.EditProductionSupplierCostActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".supplier_costs.edit.EditPurchaseSupplierCostActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".supplier_costs.edit.EditPrintSupplierCostActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".supplier_costs.edit.EditPhotographySupplierCostActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".job_orders.AddJobOrderActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".job_orders.JobOrderDetailsActivity"
             android:exported="false"
