--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:targetApi="n">
         <activity
             android:name=".ResultActivity"
-            android:exported="false" />
+            android:exported="true"/>
         <activity
             android:name=".supplier_costs.edit.EditProductionSupplierCostActivity"
             android:exported="false"
@@ -97,6 +97,7 @@
         <activity
             android:name=".home.HomeActivity"
             android:exported="false"
+            android:parentActivityName=".login.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".login.LoginActivity"
