--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
+
 android {
     compileSdk 31
 
@@ -29,8 +32,7 @@ android {
 }
 
 dependencies {
-
-    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation platform('com.google.firebase:firebase-bom:30.0.2')
     implementation 'com.google.firebase:firebase-analytics'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -48,14 +50,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
 
     //fire base crashlytics
-    // Import the BoM for the Firebase platform
-    implementation platform('com.google.firebase:firebase-bom:30.0.2')
-
-    // Declare the dependencies for the Crashlytics and Analytics libraries
-    // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-crashlytics'
-    implementation 'com.google.firebase:firebase-analytics'
-
 
     //FAB
     implementation 'com.github.clans:fab:1.6.4'
@@ -96,6 +91,4 @@ dependencies {
 
     //tag view
     implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
-
-
 }
