--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,15 @@ apply plugin: 'com.google.gms.google-services'
 
 // Apply the Crashlytics Gradle plugin
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.followup"
         minSdk 24
-        targetSdk 31
+        targetSdk 32
         versionCode 2
         versionName "1.0.2"
 
@@ -91,4 +92,16 @@ dependencies {
 
     //tag view
     implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
+
+    /*Doc picker */
+    implementation 'com.greentoad.turtlebody.docpicker:doc-picker:1.0.1'
+
+
+    //Anko
+    implementation "org.jetbrains.anko:anko:0.10.8"
+
+    /*for rxjava support*/
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
 }
