--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
         // Add the Crashlytics Gradle plugin
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
