--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,12 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            manifestPlaceholders = [crashlyticsCollectionEnabled: "false"]
+        }
         release {
+            manifestPlaceholders = [crashlyticsCollectionEnabled:"true"]
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
