--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    implementation platform('com.google.firebase:firebase-bom:30.3.0')
     implementation 'com.google.firebase:firebase-analytics'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -52,7 +52,7 @@ dependencies {
     //firebase Messaging
     implementation 'com.google.firebase:firebase-messaging:23.0.6'
     implementation 'com.google.firebase:firebase-messaging-directboot:23.0.6'
-    implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    implementation platform('com.google.firebase:firebase-bom:30.3.0')
     implementation 'com.google.firebase:firebase-analytics'
 
     //fire base crashlytics
@@ -96,6 +96,6 @@ dependencies {
     implementation 'com.github.Chrisvin:FlipTabs:v1.5'
 
     //file picker
-//    implementation 'com.github.atwa:filepicker:1.0.0'
+//    implementation 'com.github.Atwa:FilePicker:1.0.1'
 
 }
