--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     //firebase Messaging
     implementation 'com.google.firebase:firebase-messaging:23.0.7'
@@ -95,12 +96,11 @@ dependencies {
     //switch toggle
     implementation 'com.github.Chrisvin:FlipTabs:v1.5'
 
+
+
     //file picker
 //    implementation 'com.github.Atwa:FilePicker:1.0.1'
-    implementation 'com.github.girimystr1997:FilePickers:v1.0.6'
-
-    //shimmer
-    implementation 'com.faltenreich:skeletonlayout:4.0.0'
+//    implementation 'com.github.girimystr1997:FilePickers:v1.0.6'
 
 
 }
