--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,9 @@ dependencies {
     //switch toggle
     implementation 'com.github.Chrisvin:FlipTabs:v1.5'
 
+    //shape image view
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
+
 
 
     //file picker
