--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,8 @@ dependencies {
     //shape image view
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'
 
+    //mention
+    implementation("com.otaliastudios:autocomplete:1.1.0")
 
 
     //file picker
