--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdk 32
+    compileSdk 33
     buildFeatures { dataBinding = true }
     defaultConfig {
         applicationId "com.example.followup"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 8
         versionName "2.0.0"
 
@@ -51,8 +51,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     //firebase Messaging
-    implementation 'com.google.firebase:firebase-messaging:23.0.8'
-    implementation 'com.google.firebase:firebase-messaging-directboot:23.0.8'
+    implementation 'com.google.firebase:firebase-messaging:23.1.0'
+    implementation 'com.google.firebase:firebase-messaging-directboot:23.1.0'
     implementation platform('com.google.firebase:firebase-bom:30.3.0')
     implementation 'com.google.firebase:firebase-analytics'
 
@@ -105,10 +105,8 @@ dependencies {
     //Edit Text Drawable
     implementation 'com.github.MindorksOpenSource:EditDrawableText:1.1.0'
 
-
-
     //file picker
-//    implementation 'com.github.Atwa:FilePicker:1.0.1'
+//    implementation 'com.github.atwa:filepicker:1.0.4'
 //    implementation 'com.github.girimystr1997:FilePickers:v1.0.6'
 
 
