--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,9 @@ dependencies {
     //Edit Text Drawable
     implementation 'com.github.MindorksOpenSource:EditDrawableText:1.1.0'
 
+    //TextView mention
+    implementation 'com.github.tylersuehr7:social-text-view:1.0.0'
+
     //file picker
 //    implementation 'com.github.atwa:filepicker:1.0.4'
 //    implementation 'com.github.girimystr1997:FilePickers:v1.0.6'
