--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:replace="android:allowBackup"
         tools:targetApi="n">
         <activity
-            android:name=".admin.StatisticsActivity"
+            android:name=".admin.statistics.StatisticsActivity"
             android:exported="false" />
         <activity
             android:name=".admin.AllCompaniesActivity"
